MejorFront clase 2 parte 2

--- a/mejorfront/index.html
+++ b/mejorfront/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Sfotypy</title>
 	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css"/>
@@ -27,33 +28,37 @@
 	<section class="playing small center-block">
 		<figure class="image relative">
 			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae - Pharrel Whilliams"/>
-			<div class="actions padding">
+			<div class="actions padding right-text">
 				<a href="#" class="action icon-add"></a>
 				<a href="#" class="action icon-love"></a>
 				<a href="#" class="action icon-share"></a>
 			</div>
 		</figure>
-		<div class="progress">
-			<div class="total">
-				<div class="state">
-					<div class="circle"></div>
+		<div class="padding">
+			<div class="progress">
+				<span class="min">0:45</span>
+				<div class="total">
+					<div class="state">
+						<div class="circle"></div>
+					</div>
 				</div>
+				<span class="max">4:10</span>
 			</div>
-		</div>
-		<div class="description center-text">
-			<p class="name">
-				Come Get It Bae
-			</p>
-			<p class="author">
-				Pharrel Whilliams
-			</p>
-		</div>
-		<div class="play center-text">
-			<a href="#" class="action icon-prev"></a>
-			<a href="#" class="action icon-play"></a>
-			<a href="#" class="action icon-next"></a>
-			<a href="#" class="action icon-random"></a>
-			<a href="#" class="action icon-vol"></a>
+			<div class="description center-text border-bottom">
+				<p class="name">
+					Come Get It Bae
+				</p>
+				<p class="author">
+					Pharrel Whilliams
+				</p>
+			</div>
+			<div class="play center-text padding-tb">
+				<a href="#" class="action gray icon-prev"></a>
+				<a href="#" class="action gray icon-play"></a>
+				<a href="#" class="action gray icon-next"></a>
+				<a href="#" class="action gray icon-random"></a>
+				<a href="#" class="action gray icon-vol"></a>
+			</div>
 		</div>
 	</section>
 	
@@ -103,6 +108,17 @@
             </p>
         </article>
         <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article>
+		<article class="song">
             <figure class="image">
                 <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
             </figure>
