--- a/mejorfront/index.html
+++ b/mejorfront/index.html
@@ -9,6 +9,25 @@
 </head>
 <body>
     <header class="header relative border-bottom">
+        <div class="logo">
+            <div class="wrap center-block">
+                <figure class="image isotipo left">
+                    <img src="img/logo.png" alt="Sfotipy"/>
+                </figure>
+                <div class="user right">
+                    <figure class="avatar round left">
+                        <img src="http://placehold.it/74x74" alt="@richpolis" width="38" height="38"/>
+                    </figure>
+                    <span class="left username">@richpolis</span>
+                </div>
+                <div class="search right">
+                    <form action="">
+                        <span class="icon-search search-iccon"></span>
+                        <input type="text" placeholder="ejem: richpolis" class="input"/>
+                    </form>
+                </div>
+            </div>
+        </div>
 		<a href="#" class="button-menu icon-menu"></a>
 		
         <nav class="menu">
@@ -25,7 +44,7 @@
 		</div>
     </header>
 	
-	<section class="playing small center-block">
+	<section class="playing small medium center-block">
 		<figure class="image relative">
 			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae - Pharrel Whilliams"/>
 			<div class="actions padding right-text">
@@ -64,6 +83,71 @@
 	
     <section class="container">
         <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article>
+        <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article>
+        <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article>
+        <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article>
+        <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article>
+        <article class="song">
+            <figure class="image">
+                <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
+            </figure>
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrael Whilliams
+            </p>
+        </article><article class="song">
             <figure class="image">
                 <img src="img/songs/test.jpg" width="128" height="128" alt="Girl Pharrael Whilliams"/>
             </figure>
