--- a/mejorfront/index.html
+++ b/mejorfront/index.html
@@ -21,9 +21,10 @@
                     <span class="left username">@richpolis</span>
                 </div>
                 <div class="search right">
-                    <form action="">
-                        <span class="icon-search search-iccon"></span>
+                    <form action="" class="relative">
+                        <span class="icon-search search-icon"></span>
                         <input type="text" placeholder="ejem: richpolis" class="input"/>
+                        <span class="close-icon">x</span>
                     </form>
                 </div>
             </div>
@@ -31,12 +32,11 @@
 		<a href="#" class="button-menu icon-menu"></a>
 		
         <nav class="menu">
-			<ul class="list">
-				<li class="item"><a href="">Hits</a></li>
-				<li class="item"><a href="">Hits</a></li>
-				<li class="item"><a href="">Hits</a></li>
-				<li class="item"><a href="">Hits</a></li>
-				<li class="item"><a href="">Hits</a></li>
+			<ul class="list center-block wrap">
+				<li class="item"><a class="active" href="">top hits</a></li>
+				<li class="item"><a href="">profile</a></li>
+				<li class="item"><a href="">settings</a></li>
+				<li class="item"><a href="">playlists</a></li>
 			</ul>
 		</nav>
 		<div class="title">
