Fin de la clase 3 de front profesional

--- a/heraldodetoluca/index.html
+++ b/heraldodetoluca/index.html
@@ -158,8 +158,8 @@
 						</p>
 					</article>
 				</section>
-				<p class="cargador">
-					cargar mas notas <span class="cargar-mas-notas azul"></span>
+				<p class="cargador azul">
+					cargar mas notas <span class="cargar-mas-notas azul">+</span>
 				</p>
 			</article>
 			<article class="list-noticias list-videos">
@@ -167,15 +167,15 @@
 					<h2 class="titulo rojo">
 						heraldo tv
 					</h2>
-					<select name="cbCategoriasVideos" id="cbCategoriasVideos">
+					<select name="cbCategoriasVideos" id="cbCategoriasVideos" class="categorias-videos">
 						<option value="Categoria1">Categoria 1</option>
 						<option value="Categoria2">Categoria 2</option>
 						<option value="Categoria3">Categoria 3</option>
 					</select>
 				</header>
 				<div class="controles-videos">
-					<span class="control anterior">anterior</span>
-					<span class="control siguiente">siguiente</span>	
+					<span class="control-video anterior">anterior</span>
+					<span class="control-video siguiente">siguiente</span>	
 				</div>
 				<section class="videos">
 					<article class="item-noticia item-video">
@@ -453,8 +453,8 @@
 						</p>
 					</article>
 				</section>
-				<p class="cargador">
-					cargar mas notas <span class="cargar-mas-notas azul"></span>
+				<p class="cargador azul">
+					cargar mas notas <span class="cargar-mas-notas azul">+</span>
 				</p>
 			</article>
 			<article class="list-noticias">
@@ -509,8 +509,8 @@
 						</p>
 					</article>
 				</section>
-				<p class="cargador">
-					cargar mas notas <span class="cargar-mas-notas rojo"></span>
+				<p class="cargador rojo">
+					cargar mas notas <span class="cargar-mas-notas rojo">+</span>
 				</p>
 			</article>
 			<article class="list-noticias">
@@ -565,8 +565,8 @@
 						</p>
 					</article>
 				</section>
-				<p class="cargador">
-					cargar mas notas <span class="cargar-mas-notas gris"></span>
+				<p class="cargador gris">
+					cargar mas notas <span class="cargar-mas-notas gris">+</span>
 				</p>
 			</article>
 			<article class="list-noticias">
@@ -621,8 +621,8 @@
 						</p>
 					</article>
 				</section>
-				<p class="cargador">
-					cargar mas notas <span class="cargar-mas-notas azul"></span>
+				<p class="cargador azul">
+					cargar mas notas <span class="cargar-mas-notas azul">+</span>
 				</p>
 			</article>
 			<article class="list-noticias">
@@ -677,12 +677,13 @@
 						</p>
 					</article>
 				</section>
-				<p class="cargador">
-					cargar mas notas <span class="cargar-mas-notas rojo"></span>
+				<p class="cargador rojo">
+					cargar mas notas <span class="cargar-mas-notas rojo">+</span>
 				</p>
 			</article>
 		</section>
-		<footer>
+	</div>
+	<footer>
 			<div class="navegador secundario">
 				<ul>
 					<li><a href="#">nosotros</a></li>
@@ -720,8 +721,7 @@
 				<span class="youtube"></span>
 				<span class="flickr"></span>
 			</div>
-		</footer>
-	</div>
+	</footer>
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 	<script>
