--- a/mejorfront/index.html
+++ b/mejorfront/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-    <header class="header relative border-bottom">
+    <header class="header relative">
         <div class="logo">
             <div class="wrap center-block">
                 <figure class="image isotipo left">
@@ -44,41 +44,123 @@
 		</div>
     </header>
 	
-	<section class="playing small medium center-block">
-		<figure class="image relative">
-			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae - Pharrel Whilliams"/>
-			<div class="actions padding right-text">
-				<a href="#" class="action icon-add"></a>
-				<a href="#" class="action icon-love"></a>
-				<a href="#" class="action icon-share"></a>
-			</div>
-		</figure>
-		<div class="padding">
-			<div class="progress">
-				<span class="min">0:45</span>
-				<div class="total">
-					<div class="state">
-						<div class="circle"></div>
-					</div>
-				</div>
-				<span class="max">4:10</span>
-			</div>
-			<div class="description center-text border-bottom">
-				<p class="name">
-					Come Get It Bae
-				</p>
-				<p class="author">
-					Pharrel Whilliams
-				</p>
-			</div>
-			<div class="play center-text padding-tb">
-				<a href="#" class="action gray icon-prev"></a>
-				<a href="#" class="action gray icon-play"></a>
-				<a href="#" class="action gray icon-next"></a>
-				<a href="#" class="action gray icon-random"></a>
-				<a href="#" class="action gray icon-vol"></a>
-			</div>
-		</div>
+	<section class="playing small medium large">
+        <div class="music">
+            <figure class="image relative">
+    			<img src="img/songs/test-playing.jpg" width="320" height="320" alt="Come Get It Bae - Pharrel Whilliams"/>
+    			<div class="actions padding right-text">
+    				<a href="#" class="action icon-add"></a>
+    				<a href="#" class="action icon-love"></a>
+    				<a href="#" class="action icon-share"></a>
+    			</div>
+    		</figure>
+    		<div class="padding">
+    			<div class="progress">
+    				<span class="min">0:45</span>
+    				<div class="total">
+    					<div class="state">
+    						<div class="circle"></div>
+    					</div>
+    				</div>
+    				<span class="max">4:10</span>
+    			</div>
+    			<div class="description center-text border-bottom">
+    				<p class="name">
+    					Come Get It Bae
+    				</p>
+    				<p class="author">
+    					Pharrel Whilliams
+    				</p>
+    			</div>
+    			<div class="play center-text padding-tb">
+    				<a href="#" class="action gray icon-prev"></a>
+    				<a href="#" class="action gray icon-play"></a>
+    				<a href="#" class="action gray icon-next"></a>
+    				<a href="#" class="action gray icon-random"></a>
+    				<a href="#" class="action gray icon-vol"></a>
+    			</div>
+    		</div>
+        </div>
+        <div class="playlist right">
+            <p class="name">
+                Girl
+            </p>
+            <p class="author">
+                Pharrell Williams
+            </p>
+            <ul class="list">
+                <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+                <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+                <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+                <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+                 <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+                 <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+                 <li class="item border-bottom">
+                    <span>
+                        Marily Monroe
+                    </span>
+                    <span class="right">
+                        <a href="" class="action icon-add gray"></a>
+                        <a href="" class="action icon-love gray"></a>
+                        <a href="" class="action icon-share gray"></a>
+                    </span>
+                </li>
+            </ul>
+        </div>
 	</section>
 	
     <section class="container">
